<resources>
    <string name="app_name">Wallet Analyzing</string>
    <string name="click_back_to_exist">Please click BACK again to exit!</string>
    <string name="Input_Error_Account_Name_Empty">Name can\'t be empty!</string>
    <string name="Input_Error_Amount_Empty">Amount can\'t be empty!</string>
    <string name="Input_Error_Amount_Invalid">Amount Invalid!</string>
    <string name="Input_Error_Amount">Amount greater than Remain!</string>
    <string name="Input_Error_Category_Expense_Empty">Expense category can\'t be empty!</string>
    <string name="Input_Error_Category_Income_Empty">Income category can\'t be empty!</string>
    <string name="Input_Error_Account_Empty">Account can\'t be empty!</string>
    <string name="Input_Error_ToAccount_Empty">To Account can\'t be empty!</string>
    <string name="Input_Error_Transfer_Same_Account">Cannot transfer in same Account!</string>
    <string name="Input_Error_Adjustment_Same_Amount">Amount is 0!</string>
    <string name="Input_Error_budget_category_none">Please select expense category!</string>
    <string name="Input_Error_account_none">Please select account!</string>
    <string name="Input_Error_todate_invalid">To Date Invalid!</string>
    <string name="Error_Startup_No_Data">You have not save any transaction!</string>
    <string name="ListView_Transaction_Empty">Empty</string>
    <string name="ListView_Account_Empty">No account. Add one with (+) button.</string>
    <string name="icon_sum" translatable="false">Σ</string>
    <string name="button_delete">Delete</string>
    <string name="format_month_year" translatable="false">%1$d/%2$d</string>
    <string name="format_day_month_year" translatable="false">%1$d/%2$d/%3$d</string>
    <string name="format_budget_day_month" translatable="false">%1$d/%2$d</string>
    <string name="format_budget_day_month_year" translatable="false">(%1$d/%2$d/%3$d)</string>
    <string name="format_budget_day_month_year_2" translatable="false">%1$d/%2$d/%3$d</string>
    <string name="format_budget_date" translatable="false">(%1$d/%2$d - %3$d/%4$d)</string>
    <string name="format_budget_date_2" translatable="false">%1$d/%2$d ~ %3$d/%4$d</string>
    <string name="select_file_title">Select cert. file</string>
    <string name="serializable">Serializable</string>
    <string name="action_settings">Settings</string>
    <string name="tab_transaction">Transaction</string>
    <string name="tab_account">Account</string>
    <string name="tab_budget">Budget</string>
    <string name="tab_report">Report</string>
    <string name="tab_utilities">Utility</string>
    <string-array name="data_file_extension">
        <item>xls</item>
        <item>xlsx</item>
    </string-array>
    <string name="account_type_cash">Cash</string>
    <string name="account_type_bank_account">Bank Account</string>
    <string name="account_type_credit_card">Credit Card</string>
    <string name="account_type_investment">Investment</string>
    <string name="account_type_saving_deposit">Saving Deposit</string>
    <string name="account_type_other">Other</string>
    <string name="account_add_name">Name</string>
    <string name="account_add_name_hint">Account name</string>
    <string name="account_add_type">Type</string>
    <string name="account_add_currency">Currency</string>
    <string name="account_add_initial_balance">Initial balance</string>
    <string name="account_add_note">Note</string>
    <string name="account_list_remain">Balance</string>
    <string name="account_list_init_balance">Initial balance</string>
    <string name="account_list_balance">Balance: %s</string>
    <string name="currency_vnd" translatable="false">₫ - Việt Nam Đồng(VND)</string>
    <string name="currency_usd" translatable="false">$ - United States Dollar(USD)</string>
    <string name="currency_jpy" translatable="false">¥ - Japanese Yen(JPY)</string>
    <string-array name="transaction_type">
        <item>Expense</item>
        <item>Income</item>
        <item>Transfer</item>
        <item>Adjustment</item>
    </string-array>
    <string-array name="transaction_type_description">
        <item>When expending, lending, paying debts.</item>
        <item>When having incomes, borrowing, collecting debts.</item>
        <item>When transferring money between 2 of your accounts.</item>
        <item>Calculate and record a transaction according to balance.</item>
    </string-array>
    <string name="new_transaction_borrower">Borrower</string>
    <string name="new_transaction_lender">Lender</string>
    <string name="new_transaction_amount">Amount</string>
    <string name="transaction_category_expense">Category</string>
    <string name="transaction_category_income">Category</string>
    <string name="new_transaction_description">Description</string>
    <string name="new_transaction_from_account">Account</string>
    <string name="new_transaction_date">Date</string>
    <string name="new_transaction_today">Today</string>
    <string name="new_transaction_payee">Payee</string>
    <string name="new_transaction_event">Event</string>
    <string name="new_transaction_to_account">To Account</string>
    <string name="new_transaction_transfer_fee">Transfer fee</string>
    <string name="new_transaction_transfer_fee_hint">Transfer fee</string>
    <string name="new_transaction_account">Account</string>
    <string name="new_transaction_remaining_amount">Remaining amount</string>
    <string name="new_transaction_adjustment">Adjustment</string>
    <string name="new_category_name">Name</string>
    <string name="new_category_hint">Category name</string>
    <string name="new_category_parent_category">Parent Category</string>
    <string name="new_category_description">Description</string>
    <string name="new_category_select_as_parent">(No item selected)</string>
    <string name="budget_list_empty">No data.</string>
    <string name="budget_item_total">Total: %1$s</string>
    <string name="budget_item_incremental">Incremental: %1$s</string>
    <string name="budget_item_expensed">Expensed: %1$s</string>
    <string name="budget_item_balance">Balance: %1$s</string>
    <string name="budget_item_over">Over: %1$s</string>
    <string name="budget_item_expensed_no_format">Expensed:</string>
    <string name="budget_item_balance_no_format">Balance:</string>
    <string name="budget_item_over_no_format">Over:</string>
    <string name="budget_detail_description">Budget: \%%1$s \%%2$s for expense category: \%%3$s</string>
    <string name="budget_detail_description_many">Budget: \%%1$s \%%2$s for expense categories: \%%3$s</string>
    <string name="budget_detail_description_all">Budget: \%%1$s \%%2$s for all expense categories</string>
    <string name="budget_detail_detail">Details</string>
    <string name="budget_detail_history">Budget history</string>
    <string name="budget_history_description">Budget history of %1$s</string>
    <string name="budget_detail_transaction_description">Budget \%%1$s/\%%2$s ~ \%%3$s/\%%4$s (\%%5$s)</string>
    <string name="budget_detail_transaction_category_sum">Σ %1$s</string>
    <string name="budget_detail_transaction_total">Total: %1$s</string>
    <string name="new_budget_name">Name</string>
    <string name="new_budget_name_hit">Name</string>
    <string name="new_budget_amount">Amount</string>
    <string name="new_budget_repeat">Repeat</string>
    <string name="new_budget_from_date">From date</string>
    <string name="new_budget_to_date">To date</string>
    <string name="new_budget_move_to_next">Move the remaining to next budget</string>
    <string name="new_budget_move_to_next_description_not">(Balance or overspend will NOT be move to next period)</string>
    <string name="new_budget_move_to_next_description">(Balance or overspend will be move to next period)</string>
    <string-array name="budget_repeat_type">
        <item>No repeat</item>
        <item>By daily</item>
        <item>By weekly</item>
        <item>By monthly</item>
        <item>By quarterly</item>
        <item>By yearly</item>
    </string-array>
    <string-array name="report_type">
        <item>Expense vs Income</item>
        <item>Expense analysis</item>
        <item>Money lent/borrowed</item>
        <item>Financial statement</item>
        <item>Event expense</item>
        <item>Payee</item>
    </string-array>
    <string name="report_evi_accounts">Accounts:</string>
    <string name="report_evi_accounts_all_accounts">All Accounts</string>
    <string name="report_evi_accounts_select_all_accounts">Select all accounts</string>
    <string name="report_evi_viewedby">Viewed by:</string>
    <string-array name="report_evi_ar_viewedby">
        <item>Current</item>
        <item>Monthly</item>
        <item>Quarterly</item>
        <item>Yearly</item>
        <item>Period</item>
    </string-array>
    <string name="report_evi_viewedby_fromdate">From Date:</string>
    <string name="report_evi_viewedby_todate">To Date:</string>
    <string name="report_evi_today">Today (%1$d/%2$d/%3$d)</string>
    <string name="report_evi_this_week">This Week (%1$d/%2$d - %3$d/%4$d)</string>
    <string name="report_evi_this_month">This Month (%1$d/%2$d)</string>
    <string name="report_evi_this_year">This Year (%1$d)</string>
    <string name="report_evi_period" translatable="false">%1$d/%2$d/%3$d - %4$d/%5$d/%6$d</string>
    <string name="report_evi_income">Income</string>
    <string name="report_evi_expense">Expense</string>
    <string name="report_evi_all">All</string>
    <string name="report_evi_net_income">Net income</string>
    <string name="report_evi_year">Year %1$s</string>
    <string name="report_evi_monthly_balance">Balance: %1$s</string>
    <string name="report_evi_quarterly">Quarter %1$s - Balance: %2$s</string>
    <string name="report_evi_yearly">Year %1$d - Balance: %2$s</string>
    <string name="report_evi_period_expense">Expense</string>
    <string name="report_evi_period_income">Income</string>
    <string name="report_evi_period_legend_expense">%1$s %2$s</string>
    <string name="report_evi_period_legend_total_expense">%1$s Total Expense</string>
    <string name="report_expense_analysis_categories">Categories</string>
    <string name="report_expense_analysis_categories_select_all_categories">Select All Categories</string>
    <string name="report_expense_analysis_categories_all_categories">All Categories</string>
    <string name="report_expense_analysis_categories_all_income_categories">All Income Categories</string>
    <string name="report_expense_analysis_categories_all_expense_categories">All Expense Categories</string>
    <string name="report_expense_analysis_viewedby">Viewed by</string>
    <string name="report_expense_analysis_categories_income">Income</string>
    <string name="report_expense_analysis_categories_expense">Expense</string>
    <string name="report_expense_analysis_accounts">Accounts</string>
    <string name="report_expense_analysis_accounts_all_accounts">All Accounts</string>
    <string-array name="report_expense_analysis_ar_viewedby">
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Quarterly</item>
        <item>Yearly</item>
    </string-array>
    <string name="report_financial_statement_asset">Asset (1)</string>
    <string name="report_financial_statement_liabilities">Liabilities (2)</string>
    <string name="report_financial_statement_net_worth">Net worth: (1) - (2)</string>
    <string name="report_financial_statement_cash">Cash</string>
    <string name="report_financial_statement_bank_account">Bank Account</string>
    <string name="report_financial_statement_credit_card">Credit Card</string>
    <string name="report_financial_statement_investment">Investment</string>
    <string name="Save">Save</string>
    <string name="expense_category">Expense Category</string>
    <string name="currency_icon_vietnam" translatable="false">₫</string>
</resources>