<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background_main_frame"
              android:orientation="vertical"
              android:padding="8dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/background_linear_white_corner"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="4">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/new_budget_name"
            android:textColor="@color/textcolor_title_attribute"
            android:textStyle="bold"/>

        <org.droidparts.widget.ClearableEditText
            android:id="@+id/etName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@android:color/transparent"
            android:gravity="right"
            android:hint="@string/new_budget_name_hit"
            android:paddingRight="5dp"
            android:singleLine="true"
            android:textColorHint="@color/textcolor_hint"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_money_input"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="10">

        <EditText
            android:id="@+id/etAmount"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="8.8"
            android:background="@android:color/transparent"
            android:gravity="right|center_vertical"
            android:hint="@string/new_budget_amount"
            android:inputType="numberDecimal"
            android:padding="5dp"
            android:textColorHint="@color/textcolor_hint"
            android:textSize="28sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvCurrencyIcon"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1.2"
            android:background="@drawable/background_icon_currency"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/currency_icon_vietnam"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llCategory"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_linear_white_corner"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:background="@android:color/transparent"
            android:text="@string/expense_category"
            android:textColor="@color/textcolor_title_attribute"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvCategory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="13"
            android:background="@android:color/transparent"
            android:gravity="right|center_vertical"
            android:textColor="@android:color/black"
            android:singleLine="true"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_next"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_linear_white_corner"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llRepeat"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:weightSum="20">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:background="@android:color/transparent"
                android:text="@string/new_budget_repeat"
                android:textColor="@color/textcolor_title_attribute"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvRepeat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="13"
                android:background="@android:color/transparent"
                android:gravity="right|center_vertical"
                android:textColor="@android:color/black"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:src="@drawable/icon_next"/>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.2dip"
            android:background="#504f4f"/>

        <LinearLayout
            android:id="@+id/llFromDate"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:weightSum="20">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:background="@android:color/transparent"
                android:text="@string/new_budget_from_date"
                android:textColor="@color/textcolor_title_attribute"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvFromDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="13"
                android:background="@android:color/transparent"
                android:gravity="right|center_vertical"
                android:textColor="@android:color/black"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:src="@drawable/icon_next"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cbMoveToNext"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_budget_move_to_next"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_budget_move_to_next_description_not"
                android:textColor="@android:color/black"
                android:textStyle="italic"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Button SAVE -->
    <LinearLayout
        android:id="@+id/llSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_button_save"
        android:clickable="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_save"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:text="@string/Save"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>
    </LinearLayout>
</LinearLayout>