<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/ll_report_evi"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background_main_frame"
              android:clickable="true"
              android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llCategories"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:padding="5dp"
        android:weightSum="20">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:background="@android:color/transparent"
            android:text="@string/report_expense_analysis_categories"
            android:textColor="@color/textcolor_title_attribute"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:id="@+id/tvCategory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="13"
            android:background="@android:color/transparent"
            android:gravity="right|center_vertical"
            android:text="@string/report_expense_analysis_categories_all_categories"
            android:textColor="@android:color/black"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_next"/>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.2dip"
        android:background="#504f4f"/>

    <LinearLayout
        android:id="@+id/llAccounts"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="20">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:background="@android:color/transparent"
            android:text="@string/report_expense_analysis_accounts"
            android:textColor="@color/textcolor_title_attribute"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:id="@+id/tvAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="13"
            android:background="@android:color/transparent"
            android:gravity="right|center_vertical"
            android:text="@string/report_evi_accounts_all_accounts"
            android:textColor="@android:color/black"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_next"/>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.2dip"
        android:background="#504f4f"/>

    <LinearLayout
        android:id="@+id/llViewedBy"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="20">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:background="@android:color/transparent"
            android:text="@string/report_evi_viewedby"
            android:textColor="@color/textcolor_title_attribute"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:id="@+id/tvViewedBy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="13"
            android:background="@android:color/transparent"
            android:gravity="right|center_vertical"
            android:singleLine="true"
            android:text="Current"
            android:textColor="@android:color/black"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_next"/>
    </LinearLayout>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineChart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

</LinearLayout>